[package]
name = "ServiciosDatosAbiertos"
version = "0.1.0"
edition = "2024"
authors = ["Cristian Aguirre <tircnais@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4.11.0"
actix-rt = "2.10.0"
actix-cors = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
mongodb = "3.2.3"
futures = "0.3.19"
dotenv = "0.15.0"
env_logger = "0.11.8"
chrono = { version = "0.4", features = ["serde"] }
bson = { version = "2.15.0", features = ["chrono-0_4"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
